--- a/simple-page/detail.html
+++ b/simple-page/detail.html
@@ -14,7 +14,7 @@
 
             <ul>
                 <li>
-                    <a href="/">Homepage</a>
+                    <a href="index.html">Homepage</a>
                 </li>
                 <li>
                     <a href="about.html">About Me</a>
