--- a/simple-page/index.html
+++ b/simple-page/index.html
@@ -12,7 +12,7 @@
 
             <ul>
                 <li>
-                    <a href="/">Homepage</a>
+                    <a href="index.html">Homepage</a>
                 </li>
                 <li>
                     <a href="about.html">About Me</a>
