--- a/simple-page/about.html
+++ b/simple-page/about.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="shortcut icon"
+            href="images/favicon.png"
+            type="image/x-icon"
+        />
         <title>About me</title>
     </head>
     <body>
@@ -22,7 +27,7 @@
 
         <div>
             <h2>Who am I?</h2>
-            <img src="avatar.png" alt="Ba Nguyễn" width="200" />
+            <img src="images/avatar.png" alt="Ba Nguyễn" width="200" />
 
             <p>
                 My name is <b>Ba</b>, people often call me <b><i>Ba Beo</i></b
