--- a/simple-page/about.html
+++ b/simple-page/about.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Ba Nguyễn" />
+        <meta name="description" content="Example page using basic HTML tags" />
         <link
             rel="shortcut icon"
             href="images/favicon.png"
