--- a/simple-page/detail.html
+++ b/simple-page/detail.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Ba Nguyễn" />
+        <meta name="description" content="Example page using basic HTML tags" />
         <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
         <title>
             Wordpress là gì? Tại sao nên dùng WordPress để làm website?
