--- a/simple-page/index.html
+++ b/simple-page/index.html
@@ -3,8 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="author" content="Ba Nguyễn" />
+        <meta name="description" content="Example page using basic HTML tags" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+        <link
+            rel="shortcut icon"
+            href="images/favicon.png"
+            type="image/x-icon"
+        />
         <title>Simple page</title>
     </head>
     <body>
