--- a/html-basic/about.html
+++ b/html-basic/about.html
@@ -5,35 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ba Nguyễn" />
-        <meta name="description" content="Example page using basic HTML tags" />
+        <meta
+            name="description"
+            content="Trang ví dụ sử dụng các thẻ HTML cơ bản"
+        />
         <link
             rel="shortcut icon"
             href="images/favicon.png"
             type="image/x-icon"
         />
-        <title>About me</title>
+        <title>Về tôi</title>
     </head>
     <body>
         <div>
-            <h1>Simple page</h1>
+            <h1>HTML</h1>
 
             <ul>
                 <li>
-                    <a href="index.html">Homepage</a>
+                    <a href="index.html">Trang chủ</a>
                 </li>
                 <li>
-                    <a href="about.html">About Me</a>
+                    <a href="about.html">Về tôi</a>
                 </li>
             </ul>
         </div>
 
         <div>
-            <h2>Who am I?</h2>
+            <h2>Tôi là ai?</h2>
             <img src="images/avatar.png" alt="Ba Nguyễn" width="200" />
 
             <p>
-                My name is <b>Ba</b>, people often call me <b><i>Ba Beo</i></b
-                >. Nice to meet you :)
+                Xin chào, tôi là <b>Ba</b>, mọi người thường gọi tôi là
+                <b><i>Ba béo</i></b
+                >. Rất vui được gặp mọi người 🤪
             </p>
         </div>
 
