--- a/html-basic/detail.html
+++ b/html-basic/detail.html
@@ -5,22 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ba Nguyễn" />
-        <meta name="description" content="Example page using basic HTML tags" />
-        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+        <meta
+            name="description"
+            content="Trang ví dụ sử dụng các thẻ HTML cơ bản"
+        />
+        <link
+            rel="shortcut icon"
+            href="images/favicon.png"
+            type="image/x-icon"
+        />
         <title>
             Wordpress là gì? Tại sao nên dùng WordPress để làm website?
         </title>
     </head>
     <body>
         <div>
-            <h1>Simple page</h1>
+            <h1>HTML</h1>
 
             <ul>
                 <li>
-                    <a href="index.html">Homepage</a>
+                    <a href="index.html">Trang chủ</a>
                 </li>
                 <li>
-                    <a href="about.html">About Me</a>
+                    <a href="about.html">Về tôi</a>
                 </li>
             </ul>
         </div>
