--- a/html-basic/index.html
+++ b/html-basic/index.html
@@ -4,31 +4,34 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="Ba Nguyễn" />
-        <meta name="description" content="Example page using basic HTML tags" />
+        <meta
+            name="description"
+            content="Trang ví dụ sử dụng các thẻ HTML cơ bản"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="shortcut icon"
             href="images/favicon.png"
             type="image/x-icon"
         />
-        <title>Simple page</title>
+        <title>HTML</title>
     </head>
     <body>
         <div>
-            <h1>Simple page</h1>
+            <h1>HTML</h1>
 
             <ul>
                 <li>
-                    <a href="index.html">Homepage</a>
+                    <a href="index.html">Trang chủ</a>
                 </li>
                 <li>
-                    <a href="about.html">About Me</a>
+                    <a href="about.html">Về tôi</a>
                 </li>
             </ul>
         </div>
 
         <div>
-            <h2>All posts</h2>
+            <h2>Tất cả bài viết</h2>
 
             <div>
                 <img
